# ESP32-CozeAgent

./: .gitignore  DISPLAY_UI_ARCHITECTURE_REPORT.md  ESP32-S3-Touch-AMOLED.md  IDFGuide.md  README.md  questions.md  sdkconfig  sdkconfig.defaults
backup_realtime_v1/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
backup_realtime_v1/components/app_core/: app_core.c  app_events.c
backup_realtime_v1/components/audio_pipeline/: CMakeLists.txt  audio_pipeline.c  audio_player.c  audio_recorder.c
backup_realtime_v1/components/audio_pipeline/include/: audio_player.h
backup_realtime_v1/components/azure_realtime/: azure_protocol.c
backup_realtime_v1/components/coze_ws/: coze_protocol.c
backup_realtime_v1/main/: CMakeLists.txt  app_main.c
components/SensorLib/: CMakeLists.txt
components/XPowersLib/src/: PowersSY6970.tpp  XPowersAXP202.tpp  XPowersLibInterface.cpp  XPowersLibInterface.hpp
components/app_core/: CMakeLists.txt  app_wifi.c
components/app_core/include/: app_wifi.h
components/audio_pipeline/: audio_pipeline.c
components/audio_pipeline/include/: audio_pipeline.h  audio_recorder.h
components/av_render/: CMakeLists.txt  README.md
components/av_render/include/: av_render.h
components/av_render/render_impl/: i2s_render.c  idf_component.yml
components/av_render/src/: av_render.c
components/azure_realtime/: CMakeLists.txt  azure_realtime.c
components/azure_realtime/include/: azure_realtime.h
components/bsp_board.disabled/: CMakeLists.txt.bak  bsp_board.c  bsp_button.c  bsp_display.c  bsp_i2s.c  bsp_touch.c
components/bsp_board.disabled/include/: bsp_board.h  bsp_button.h  bsp_display.h  bsp_i2s.h  bsp_touch.h
components/codec_board/: board_cfg.txt  idf_component.yml
components/coze_ws/: CMakeLists.txt  coze_ws.c  idf_component.yml
components/coze_ws/include/: coze_protocol.h  coze_ws.h
components/debug_console/: CMakeLists.txt  debug_console.c  debug_console.h
components/display/: CMakeLists.txt  display_init.c
components/display/include/: display_init.h
components/drivers/: CMakeLists.txt  axp2101_driver.cpp  i2c_bus.c  pcf85063_driver.cpp
components/drivers/include/: axp2101_driver.h  i2c_bus.h  pcf85063_driver.h
components/esp_capture/: CMakeLists.txt
components/esp_capture/include/: esp_capture_audio_enc.h  esp_capture_defaults.h  esp_capture_text_overlay.h  esp_capture_types.h
components/esp_capture/interface/: esp_capture_aenc_if.h  esp_capture_overlay_if.h  esp_capture_video_src_if.h
components/esp_capture/src/: esp_capture.c  esp_capture_sync.c  share_q.c  share_q.h
components/esp_capture/src/impl/capture_audio_enc/: CMakeLists.txt
components/esp_capture/src/impl/capture_audio_src/: CMakeLists.txt  capture_aud_aec_src.c  idf_component.yml
components/esp_capture/src/impl/capture_file_src/: capture_audio_file_src.c
components/esp_capture/src/impl/capture_simple_path/: esp_capture_path_simple.c
components/esp_capture/src/impl/capture_text_overlay/: Kconfig  esp_capture_text_overlay.c  idf_component.yml
components/esp_capture/src/impl/capture_video_enc/: CMakeLists.txt  capture_video_enc.c
components/esp_webrtc/: CMakeLists.txt  idf_component.yml
components/esp_webrtc/impl/apprtc_signal/: https_client.c
components/esp_webrtc/impl/peer_default/include/: esp_peer_default.h
components/esp_webrtc/impl/whip_signal/: whip_signaling.c
components/esp_webrtc/include/: esp_peer.h  esp_peer_types.h  esp_webrtc.h
components/media_lib_sal/: idf_component.yml
components/media_lib_sal/port/: media_lib_crypt_default.c  media_lib_os_freertos.c  msg_q.c
components/simple_button/: CMakeLists.txt  bsp_button.c  bsp_button.h
components/system_info/: CMakeLists.txt  system_info.c  system_info.h
components/ui_lvgl/: CMakeLists.txt  ui_idle.c  ui_info_carousel.c  ui_listening.c  ui_manager.c  ui_speaking.c  ui_thinking.c
components/ui_lvgl/include/: ui_idle.h  ui_info_carousel.h  ui_listening.h  ui_manager.h  ui_speaking.h  ui_thinking.h
components/waveshare__esp32_s3_touch_amoled_1_75/: esp32_s3_touch_amoled_1_75.c  idf_component.yml
components/webrtc_azure/: CMakeLists.txt  media_sys.c  openai_signaling.c  webrtc_azure.c
components/webrtc_azure/include/: webrtc_azure.h  webrtc_azure_settings.h
example/: main-backup.cpp
example/ESP-IDF-v5.4/01_AXP2101/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.defaults
example/ESP-IDF-v5.4/02_PCF85063/: sdkconfig
example/ESP-IDF-v5.4/03_QMI8658/: CMakeLists.txt  Makefile  sdkconfig
example/ESP-IDF-v5.4/04_SD_MMC/: sdkconfig.defaults
example/ESP-IDF-v5.4/05_LVGL_WITH_RAM/: example_qspi_with_ram.c  sdkconfig  sdkconfig.defaults
example/ESP-IDF-v5.4/06_I2SCodec/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
example/ESP-IDF-v5.4/06_I2SCodec/main/: CMakeLists.txt  example_config.h  i2s_es8311_example.c  idf_component.yml  status_display.cpp  status_display.h
example/ESP-IDF-v5.4/07_Touch/: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  app_main.c  idf_component.yml
webrtc_openai/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
webrtc_openai/common/: idf_component.yml  network.c  sys_state.c
webrtc_openai/components/av_render/: CMakeLists.txt  idf_component.yml
webrtc_openai/components/av_render/render_impl/: CMakeLists.txt
webrtc_openai/components/av_render/src/: audio_resample.c
webrtc_openai/components/esp_capture/: CMakeLists.txt  README.md  (+1 more)
webrtc_openai/components/esp_capture/src/impl/capture_video_src/: CMakeLists.txt  capture_video_dvp_src.c  capture_video_v4l2_src.c  idf_component.yml
webrtc_openai/components/esp_webrtc/: CMakeLists.txt
webrtc_openai/components/esp_webrtc/impl/apprtc_signal/: https_client.h
webrtc_openai/components/esp_webrtc/impl/peer_default/: CMakeLists.txt
webrtc_openai/components/esp_webrtc/src/: esp_peer.c  esp_webrtc.c
webrtc_openai/main/: CMakeLists.txt  board.c  common.h  idf_component.yml  main.c  media_sys.c  openai_signaling.c  settings.h  webrtc.c
(+64 files in other folders)
